Fixed "invisible" search queries problem

--- a/public/stylesheets/less/header.less
+++ b/public/stylesheets/less/header.less
@@ -4,17 +4,13 @@
   background-color: @brand-primary;
   border: none !important;
   margin-bottom: 0;
-  *,
-  *:hover, 
-  *:focus {
-    color: white;
-  }
   &-btn {
     line-height: 22px;
     text-shadow: none;
     &,
     &:hover,
     &:focus {
+      color: white;
       background: none;
       border-color: white;
     }
@@ -30,6 +26,11 @@
   font-size:1.5em;
   line-height: @navbar-height;
   margin-right: 0 !important;
+  *,
+  *:hover, 
+  *:focus {
+    color: white;
+  }
   img {
     height: 28px;
     width: auto;
